force-app/main/default/objects/LocationItemPrice__c/LocationItemPrice__c.object-meta.xml
<CustomObject>
    <description>Release 254: LocationItemPrice</description>
    <label>LocationItemPrice</label>
    <nameField>
        <label>LocationItemPrice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LocationItemPrice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>