force-app/main/default/objects/LocationItemPrice__c/fields/Product_Selling_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Selling_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Selling Model</label>
    <referenceTo>ProductSellingModel</referenceTo>
    <relationshipLabel>LocationItemPrice</relationshipLabel>
    <relationshipName>LocationItemPrice</relationshipName>
    <type>Lookup</type>
</CustomField>